Main Teachers section completed

--- a/KidKinder/Views/Classes/Index.cshtml
+++ b/KidKinder/Views/Classes/Index.cshtml
@@ -72,3 +72,19 @@
         </div>
     </div>
 </div>
+
+<div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+    <div class="container-fluid pt-5"
+         style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
+        <p class="m-0 text-center text-white">
+            &copy;
+            <a class="text-primary font-weight-bold" href="#">KidKinder </a>.
+            Tüm hakları saklıdır.
+
+            Designed by
+            <a class="text-primary font-weight-bold" href="https://htmlcodex.com">Kadir GÜVEN</a>
+            <br />Distributed By:
+            <a href="#" target="_blank">Murat YÜCEDAĞ</a>
+        </p>
+    </div>
+</div>
