--- a/KidKinder/Views/Default/Index.cshtml
+++ b/KidKinder/Views/Default/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@model CreateBookingViewModel
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UILayout.cshtml";
@@ -12,7 +14,72 @@
 
 @await Component.InvokeAsync("_ClassesPartial")
 
-@await Component.InvokeAsync("_RegisterPartial")
+
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-7 mb-5 mb-lg-0">
+                <p class="section-title pr-5">
+                    <span class="pr-2">Kayıt Yaptırın..</span>
+                </p>
+                <h1 class="mb-4">Çocuğunuz için kaydını yapalım..</h1>
+                <p>
+                    Çocuğunuz için bir yer ayırtın! Biz, çocuklarınızın her birinin bireysel yeteneklerini keşfetmelerini ve geliştirmelerini destekleyen bir ortam sunuyoruz. Nitelikli eğitimcilerimiz, çocukların meraklarını ve öğrenme isteklerini teşvik ederken, güvenli ve destekleyici bir ortam sağlıyoruz. Oyun alanlarımız, müzik ve dans etkinliklerimiz, sanat ve el sanatları derslerimiz, güvenli ulaşım imkanlarımız ve sağlıklı beslenme seçeneklerimizle çocuklarınızın gelişimine katkıda bulunuyoruz. Sınırlı kontenjanlarımız dolmadan yerinizi ayırtın ve çocuğunuzun eğitim yolculuğunda yer alın!
+                </p>
+                <ul class="list-inline m-0">
+                    <li class="py-2 border-top border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>STEM sınıfları ile teknolojiye daha yakın
+                    </li>
+                    <li class="py-2 border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>Geleneksel eğitim anlayışına yakın
+                    </li>
+                    <li class="py-2 border-bottom">
+                        <i class="fa fa-check text-primary mr-3"></i>Robotik kodlama ile geleceği şekillendiren
+                    </li>
+                </ul>
+                <a href="#" class="btn btn-primary mt-4 py-2 px-4">Şimdi Kayıt Yap..</a>
+            </div>
+            <div class="col-lg-5">
+                <div class="card border-0">
+                    <div class="card-header bg-secondary text-center p-4">
+                        <h1 class="text-white m-0">Kayıt Yapın..</h1>
+                    </div>
+                    <div class="card-body rounded-bottom bg-primary p-5">
+                        <form method="post">
+                            <div class="form-group">
+                                <input type="text" asp-for="Name"
+                                       class="form-control border-0 p-4"
+                                       placeholder="İsminiz"
+                                       required="required" />
+                            </div>
+                            <div class="form-group">
+                                <input type="email" asp-for="Mail"
+                                       class="form-control border-0 p-4"
+                                       placeholder="Mail Adresiniz"
+                                       required="required" />
+                            </div>
+                            <div class="form-group">
+                                <input type="text" asp-for="Phone"
+                                       class="form-control border-0 p-4"
+                                       placeholder="Telefon Numaranız"
+                                       required="required" />
+                            </div>
+                            <div class="form-group">
+                                @Html.DropDownListFor(x => x.KidClassID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" })
+                            </div>
+                            <div>
+                                <button class="btn btn-secondary btn-block border-0 py-3"
+                                        type="submit">
+                                    Kayıt Yap..
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @await Component.InvokeAsync("_TeacherPartial")
 
