--- a/KidKinder/Views/Shared/Components/_RegisterPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_RegisterPartial/Default.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@model KidClass
+
 <div class="container-fluid py-5">
     <div class="container">
         <div class="row align-items-center">
@@ -21,7 +23,7 @@
                         <i class="fa fa-check text-primary mr-3"></i>Robotik kodlama ile geleceği şekillendiren
                     </li>
                 </ul>
-                <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
+                <a href="#" class="btn btn-primary mt-4 py-2 px-4">Şimdi Kayıt Yap..</a>
             </div>
             <div class="col-lg-5">
                 <div class="card border-0">
@@ -49,13 +51,7 @@
                                        required="required" />
                             </div>
                             <div class="form-group">
-                                <select class="custom-select border-0 px-4"
-                                        style="height: 47px">
-                                    <option selected>Bir sınıf seçin..</option>
-                                    <option value="1">Class 1</option>
-                                    <option value="2">Class 1</option>
-                                    <option value="3">Class 1</option>
-                                </select>
+                                @Html.DropDownListFor(x => x.KidClassID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" })
                             </div>
                             <div>
                                 <button class="btn btn-secondary btn-block border-0 py-3"
