--- a/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@model List<Testimonial>
 
 <div class="container-fluid py-5">
     <div class="container p-0">
@@ -9,74 +10,26 @@
             <h1 class="mb-4">Ebeveyinlerimiz Ne Demiş!</h1>
         </div>
         <div class="owl-carousel testimonial-carousel">
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr
-                    eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle"
-                         src="~/kidkinder-1.0.0/img/testimonial-1.jpg"
-                         style="width: 70px; height: 70px"
-                         alt="Image" />
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
+            @foreach(var item in Model)
+            {
+                <div class="testimonial-item px-3">
+                    <div class="bg-light shadow-sm rounded mb-4 p-4">
+                        <h3 class="fas fa-quote-left text-primary mr-3"></h3>
+                       @item.Comment
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <img class="rounded-circle"
+                             src="@item.ImageUrl"
+                             style="width: 70px; height: 70px"
+                             alt="Image" />
+                        <div class="pl-3">
+                            <h5>@item.Name</h5>
+                            <i>@item.WhosParent</i>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr
-                    eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle"
-                         src="img/testimonial-2.jpg"
-                         style="width: 70px; height: 70px"
-                         alt="Image" />
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr
-                    eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle"
-                         src="img/testimonial-3.jpg"
-                         style="width: 70px; height: 70px"
-                         alt="Image" />
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr
-                    eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle"
-                         src="img/testimonial-4.jpg"
-                         style="width: 70px; height: 70px"
-                         alt="Image" />
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
-                    </div>
-                </div>
-            </div>
+            }
+           
         </div>
     </div>
 </div>
