--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -27,7 +27,9 @@
             <li><a href="/Admin/Class/Index"><i class="fa fa-clock-o orange_color"></i> <span>Sınıflar</span></a></li>
             <li><a href="/Admin/Teacher/Index"><i class="fa fa-user"></i> <span>Öğretmenler</span></a></li>
             <li><a href="/Admin/Kid/Index"><i class="fa fa-group red_color"></i> <span>Öğrenciler</span></a></li>
+            <li> <a href="/Admin/Parent/Index"> <i class="fa fa-user-secret purple_color"></i> <span>Ebeveynler</span></a> </li>
             <li> <a href="/Admin/Message/Index"> <i class="fa fa-paper-plane green_color"></i> <span>Mesajlar</span></a> </li>
+
             <li> <a href="/Admin/Gallery/Index"> <i class="fa fa-image white_color"></i> <span>Galeri</span></a> </li>
             <li class="active">
                 <a href="#additional_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-clone yellow_color"></i> <span>Kayıtlar</span></a>
