--- a/KidKinder/Views/Shared/Components/_AdminProgressPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_AdminProgressPartial/Default.cshtml
@@ -14,33 +14,12 @@
                     <div class="progress_bar">
                         @foreach(var item in Model)
                         {
-                            <span class="skill" style="width:73%;">@item.ClassName <span class="info_valume">@item.Capacity</span></span>
+                            <span class="skill" style="width:73%;">@item.ClassName <span class="info_valume">@Convert.ToInt32(item.Capacity)</span></span>
                             <div class="progress skill-bar ">
-                                <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="@item.Capacity" aria-valuemin="0" aria-valuemax="100" style="width:@item.Capacity%;">
+                                <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="@Convert.ToInt32(item.Capacity)" aria-valuemin="0" aria-valuemax="100" style="width:@Convert.ToInt32(item.Capacity)%;">
                                 </div>
                             </div>
                         }
-                        
-                    @*     <span class="skill" style="width:62%;">Twitter <span class="info_valume">62%</span></span>
-                        <div class="progress skill-bar">
-                            <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100" style="width: 62%;">
-                            </div>
-                        </div>
-                        <span class="skill" style="width:54%;">Instagram <span class="info_valume">54%</span></span>
-                        <div class="progress skill-bar">
-                            <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;">
-                            </div>
-                        </div>
-                        <span class="skill" style="width:82%;">Google plus <span class="info_valume">82%</span></span>
-                        <div class="progress skill-bar">
-                            <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">
-                            </div>
-                        </div>
-                        <span class="skill" style="width:48%;">Other <span class="info_valume">48%</span></span>
-                        <div class="progress skill-bar">
-                            <div class="progress-bar progress-bar-animated progress-bar-striped" role="progressbar" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100" style="width: 48%;">
-                            </div>
-                        </div> *@
                     </div>
                 </div>
             </div>
