--- a/KidKinder/Areas/Admin/Views/Class/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Class/Index.cshtml
@@ -48,8 +48,8 @@
                                             <td>@item.TotalSeats</td>
                                             <td>@item.ClassTime</td>
                                             <td>@item.TutionFee</td>
-                                            <td><a href="/Admin/Class/DeleteClass/@item.KidClassID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Admin/Class/UpdateClass/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
+                                            <td width="120px"><a href="/Admin/Class/DeleteClass/@item.KidClassID" class="btn btn-danger">Sil</a></td>
+                                            <td width="120px"><a href="/Admin/Class/UpdateClass/@item.KidClassID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
