--- a/KidKinder/Areas/Admin/Views/Feature/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Feature/Index.cshtml
@@ -45,7 +45,7 @@
                                             <td>@item.Header</td>
                                             <td>@item.Title</td>
                                             <td>@item.Description</td>
-                                            <td><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-warning">Güncelle</a></td>
+                                            <td width="120px"><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
