--- a/KidKinder/Areas/Admin/Views/Kid/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Kid/Index.cshtml
@@ -48,8 +48,8 @@
                                             <td>@item.Parents.Name</td>
                                             <td>@item.Parents.Phone</td>
                                             <td>@item.Class.Name</td>
-                                            <td><a href="/Admin/Kid/DeleteKid/@item.KidID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Admin/Kid/UpdateKid/@item.KidID" class="btn btn-warning">Güncelle</a></td>
+                                            <td width="120px"><a href="/Admin/Kid/DeleteKid/@item.KidID" class="btn btn-danger">Sil</a></td>
+                                            <td width="120px"><a href="/Admin/Kid/UpdateKid/@item.KidID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
