--- a/KidKinder/Areas/Admin/Views/Message/DoneMessage.cshtml
+++ b/KidKinder/Areas/Admin/Views/Message/DoneMessage.cshtml
@@ -43,7 +43,7 @@
                                             <td>@item.Mail</td>
                                             <td>@item.Subject</td>
                                             <td>@item.Message</td>
-                                            <td><a href="/Admin/Message/DeleteMessage/@item.ContactID" class="btn btn-danger">Sil</a></td>
+                                            <td width="120px"><a href="/Admin/Message/DeleteMessage/@item.ContactID" class="btn btn-danger">Sil</a></td>
                                         </tr>
                                     }
                                 </tbody>
