--- a/KidKinder/Areas/Admin/Views/Parent/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Parent/Index.cshtml
@@ -51,8 +51,8 @@
                                             <td>@item.Mail</td>
                                             <td>@item.Address</td>
                                             <td>@item.TotalDebt</td>
-                                            <td><a href="/Admin/Parent/DeleteParent/@item.ParentID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Admin/Parent/UpdateParent/@item.ParentID" class="btn btn-warning">Güncelle</a></td>
+                                            <td width="120px"><a href="/Admin/Parent/DeleteParent/@item.ParentID" class="btn btn-danger">Sil</a></td>
+                                            <td width="120px"><a href="/Admin/Parent/UpdateParent/@item.ParentID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
