--- a/KidKinder/Areas/Admin/Views/Teacher/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Teacher/Index.cshtml
@@ -51,8 +51,8 @@
                                             <td>@item.FacebookUrl</td>
                                             <td>@item.InstagramUrl</td>
                                             <td>@item.LinkedinUrl</td>
-                                            <td><a href="/Admin/Teacher/DeleteTeacher/@item.TeacherID" class="btn btn-danger">Sil</a></td>
-                                            <td><a href="/Admin/Teacher/UpdateTeacher/@item.TeacherID" class="btn btn-warning">Güncelle</a></td>
+                                            <td width="120px"><a href="/Admin/Teacher/DeleteTeacher/@item.TeacherID" class="btn btn-danger">Sil</a></td>
+                                            <td width="120px"><a href="/Admin/Teacher/UpdateTeacher/@item.TeacherID" class="btn btn-warning">Güncelle</a></td>
                                         </tr>
                                     }
                                 </tbody>
