--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_SidebarPartial.cshtml
@@ -34,13 +34,10 @@
                 <a href="#additional_page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-clone yellow_color"></i> <span>Kayıtlar</span></a>
                 <ul class="collapse list-unstyled" id="additional_page">
                     <li>
-                        <a href="/Admin/Message/Index">> <span>Onay Bekleyen Kayıtlar</span></a>
+                        <a href="/Admin/Booking/Index"> <span>Kayıt İstekleri</span></a>
                     </li>
                     <li>
-                        <a href="/Admin/Message/Index">> <span>Onaylanan Kayıtlar</span></a>
-                    </li>
-                    <li>
-                        <a href="/Admin/Message/Index">> <span>İptal Edilen Kayıtlar</span></a>
+                        <a href="/Admin/Booking/CompletedBooking"> <span>Tamamlanan Kayıtlar</span></a>
                     </li>
                 </ul>
             </li>
