--- a/KidKinder/Views/Shared/Components/_TeacherPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TeacherPartial/Default.cshtml
@@ -20,17 +20,17 @@
                         <div class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
                             <a class="btn btn-outline-light text-center mr-2 px-0"
                                style="width: 38px; height: 38px"
-                               href="#">
+                               href="@item.InstagramUrl">
                                 <i class="fab fa-twitter"></i>
                             </a>
                             <a class="btn btn-outline-light text-center mr-2 px-0"
                                style="width: 38px; height: 38px"
-                               href="#">
+                               href="@item.FacebookUrl">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                             <a class="btn btn-outline-light text-center px-0"
                                style="width: 38px; height: 38px"
-                               href="#">
+                               href="@item.LinkedinUrl">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </div>
