--- a/KidKinder/Areas/Admin/Views/Testimonial/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Testimonial/Index.cshtml
@@ -41,7 +41,7 @@
                                     {
                                         <tr>
                                             <td class="align-middle">
-                                                <img src="@item.ImageUrl" style="border-radius:50%" width="80px" height="80px" />
+                                                <img src="/testimonialImages/@item.ImageUrl" style="border-radius:50%" width="80px" height="80px" />
                                             </td>
                                             <td class="align-middle">
                                                 <span>
