--- a/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/UILayoutPartial/_UINavbarPartial.cshtml
@@ -23,7 +23,7 @@
                 <a href="/Gallery/Index" class="nav-item nav-link">Galeri</a>
                 <a href="/GetInTouch/Index" class="nav-item nav-link">İletişim</a>
             </div>
-            <a href="" class="btn btn-primary px-4">Hemen Kayıt Yaptır..</a>
+            <a href="/Admin/Dashboard/Index" class="btn btn-primary px-4">Hemen Kayıt Yaptır..</a>
         </div>
     </nav>
 </div>
