--- a/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
+++ b/KidKinder/Views/Shared/Components/_TestimonialPartial/Default.cshtml
@@ -19,7 +19,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <img class="rounded-circle"
-                             src="@item.ImageUrl"
+                             src="/testimonialImages/@item.ImageUrl"
                              style="width: 70px; height: 70px"
                              alt="Image" />
                         <div class="pl-3">
