Contact section completed

--- a/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_TopbarPartial.cshtml
+++ b/KidKinder/Views/LayoutPartial/AdminLayoutPartial/_TopbarPartial.cshtml
@@ -5,15 +5,10 @@
         <div class="full">
             <button type="button" id="sidebarCollapse" class="sidebar_toggle"><i class="fa fa-bars"></i></button>
             <div class="logo_section">
-                <a href="index.html"><img class="img-responsive" src="~/pluto-1.0.0/images/logo/logo.png" alt="#" /></a>
+                <a href="/Admin/Dashboard/Index"><img class="img-responsive" src="~/pluto-1.0.0/images/logo/logo.png" alt="#" /></a>
             </div>
             <div class="right_topbar">
                 <div class="icon_info">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-bell-o"></i><span class="badge">2</span></a></li>
-                        <li><a href="#"><i class="fa fa-question-circle"></i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope-o"></i><span class="badge">3</span></a></li>
-                    </ul>
                     <ul class="user_profile_dd">
                         <li>
                             <a class="dropdown-toggle" data-toggle="dropdown"><img class="img-responsive rounded-circle" src="~/pluto-1.0.0/images/layout_img/user_img.jpg" alt="#" /><span class="name_user">Admin</span></a>
