Last refactoring handled

--- a/KidKinder/Areas/Admin/Views/Kid/Index.cshtml
+++ b/KidKinder/Areas/Admin/Views/Kid/Index.cshtml
@@ -59,7 +59,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <a href="/Admin/Kid/CreateKid" class="btn btn-primary">Sınıf Oluştur</a>
+                        <a href="/Admin/Kid/CreateKid" class="btn btn-primary">Öğrenci Kaydı Yap</a>
                     </div>
                 </div>
             </div>
