--- a/KidKinder/Views/Login/SignIn.cshtml
+++ b/KidKinder/Views/Login/SignIn.cshtml
@@ -35,7 +35,7 @@
                 <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                     <div class="container-fluid">
                         <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="../pages/dashboard.html">
-                            Traversal Kayıt Ekranı
+                           KidKinder Kayıt Ekranı
                         </a>
                         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon mt-2">
@@ -85,7 +85,7 @@
                         <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
                             <div class="card card-plain mt-8">
                                 <div class="card-header pb-0 text-left bg-transparent">
-                                    <h3 class="font-weight-bolder text-info text-gradient">Welcome Traversal</h3>
+                                    <h3 class="font-weight-bolder text-info text-gradient">KidKinder'e Hoşgelsiniz</h3>
                                     <p class="mb-0">Giriş yapmak için alanları doldurunuz.</p>
                                 </div>
                                 <div class="card-body">
