--- a/KidKinder/Areas/Admin/Views/Parent/CreateParent.cshtml
+++ b/KidKinder/Areas/Admin/Views/Parent/CreateParent.cshtml
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="form-group p-1">
                                     <label>2. Telefon</label>
-                                    <input type="text" class="form-control form-control-s" asp-for="Phone" placeholder="2. Telefon numarası girin">
+                                    <input type="text" class="form-control form-control-s" asp-for="SecondPhone" placeholder="2. Telefon numarası girin">
                                 </div>
                                 <div class="form-group p-1">
                                     <label>Mail</label>
